[tool.poetry]
name = "tic-tac-toe-python"
version = "0.1.0"
description = "A Python implementation of the Tic-Tac-Toe game."
authors = ["Giansimone Perrino <hello@giansimone.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/giansimone/Tic-Tac-Toe-Python"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
